# shiny-fishstick

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_ANALYSIS.md  ENVIRONMENT_VARIABLES_GUIDE.md  LIVE_UPDATE_TODO.md  README.md  RELEASE.md  cleanup.md  cleanup.sh  cleanup_safe.sh  code_analysis_report.md  duplication.md  keywords.md  pytest.ini
delta_vision/: README.md  pyproject.toml  pytest.ini
delta_vision/packaging/: deltavision.spec
delta_vision/src/delta_vision/: __init__.py  __main__.py  entry_points.py
delta_vision/src/delta_vision/net/: client.py  server.py  server_config.py
delta_vision/src/delta_vision/screens/: compare.py  compare.tcss  diff.tcss  diff_viewer.py  file_viewer.py  keywords.tcss  keywords_parser.py  keywords_screen.py  main_screen.py  main_screen.tcss  search.py  search.tcss  stream.py  stream.tcss  viewer.tcss  watchdog_helper.py
delta_vision/src/delta_vision/themes/: __REMOVE_ME__  __init__.py  cyberpunk2077.py  dainty.py  hackthebox.py  houston.py  kanagawa.py  monaspace.py  synthwave84.py
delta_vision/src/delta_vision/utils/: base_screen.py  common_imports.py  config.py  diff_engine.py  error_handling.py  file_parsing.py  fs.py  io.py  keyword_highlighter.py  keywords_scanner.py  logger.py  screen_navigation.py  search_engine.py  table_navigation.py  text.py  theme_color_calculator.py  validation.py  watchdog.py
delta_vision/src/delta_vision/widgets/: footer.py  notes_drawer.py
delta_vision/tests/: conftest.py  test_base_screen.py  test_config.py  test_diff_engine.py  test_home_app.py  test_homeapp_structure.py  test_integration.py  test_keyword_highlighter.py  test_live_updates.py  test_networking.py  test_notes_removal.py  test_search_engine.py  test_search_engine_simple.py  test_smoke_diff_tabs.py  test_smoke_main.py  test_text.py  test_theme_compatibility.py  test_theme_edge_cases.py  test_theme_system.py  test_validation.py
release/: RELEASE-NOTES-v0.1.3.md  RELEASE-NOTES-v0.2.0.md
scripts/: make_app_bundle_tar.sh  (+4 more)
(+36 files in other folders)
